Sun May 24 19:23:28 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: now 3 pathes
	  (define, resolve entities, resolve expr) are not required; just
	  use old 2 pathes (define, resolve).  Old TypeResolver fixed a type
	  of AddressNode, it requires 3 path.  But current implementation
	  fixes a type of AddressNode in DereferenceChecker, we do not need
	  3 path.

	* net/loveruby/cflat/ast/AST.java: #entities -> #definitions.

	* net/loveruby/cflat/ast/AST.java: new method #entities, it
	  returns #definitions + #declarations.

	* net/loveruby/cflat/compiler/TypeResolver.java: follow it.

	* net/loveruby/cflat/compiler/LocalResolver.java: follow it.

Sun May 24 11:58:15 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (If): refactoring:
	  increase readability.

Sun May 24 02:08:47 2009  Minero Aoki  <aamine@loveruby.net>

	* utilize final field.

Sun May 24 01:18:36 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: reorder methods.

Sun May 24 00:42:28 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir: rename class: BranchIf -> CJump.

	* net/loveruby/cflat/ir/IRVisitor.java: follow it.

	* net/loveruby/cflat/compiler/IRGenerator.java: ditto.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

Sun May 24 00:01:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  reorder stmts.

Sat May 23 23:31:17 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring: use
	  reverse(node.args) instead of ListIterator.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

	* net/loveruby/cflat/utils/ListUtils.java: new utility class.

	* net/loveruby/cflat/ast/FuncallNode.java: remove #finalArgs.

	* net/loveruby/cflat/ir/Call.java: ditto.

	* net/loveruby/cflat/ast/FuncallNode.java: refactoring: rename