@@ -1,11 +1,16 @@
 package net.loveruby.cflat.ast;
-import net.loveruby.cflat.type.*;
+import net.loveruby.cflat.type.Type;
 
-public class AddressNode extends UnaryOpNode {
-    protected Type type;
+public class AddressNode extends ExprNode {
+    final ExprNode expr;
+    Type type;
 
-    public AddressNode(ExprNode n) {
-        super("&", n);
+    public AddressNode(ExprNode expr) {
+        this.expr = expr;
+    }
+
+    public ExprNode expr() {
+        return expr;
     }
 
     public Type type() {
@@ -14,10 +19,21 @@ public class AddressNode extends UnaryOpNode {
     }
 
     /** Decides type of this node.
-     * This method is called in TypeChecker. */
+     * This method is called from DereferenceChecker. */
     public void setType(Type type) {
         if (this.type != null) throw new Error("type set twice");
         this.type = type;
+    }
+
+    public Location location() {
+        return expr.location();
+    }
+
+    protected void _dump(Dumper d) {
+        if (type != null) {
+            d.printMember("type", type);
+        }
+        d.printMember("expr", expr);
     }
 
     public <S,E> E accept(ASTVisitor<S,E> visitor) {
