@@ -45,6 +45,9 @@ public class ArefNode extends LHSNode {
     }
 
     protected void _dump(Dumper d) {
+        if (type != null) {
+            d.printMember("type", type);
+        }
         d.printMember("expr", expr);
         d.printMember("index", index);
     }
