@@ -246,6 +246,7 @@ test_25_block() {
 
 test_26_funcptr() {
     assert_out "OK;OK;OK;OK" ./funcptr
+    assert_out ";OK;OK;OK;OK;OK" ./implicitaddr
     assert_compile_error defun-semcheck.cb
     assert_compile_error defun-semcheck2.cb
     assert_compile_error defun-semcheck3.cb
